feat(gltf): successfully loading gltf models

--- a/package.json
+++ b/package.json
@@ -8,8 +8,30 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.3.6",
+    "drei": "^0.0.18",
+    "lerp": "^1.0.3",
+    "next": "9.3.5",
+    "next-transpile-modules": "^3.3.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-promise-suspense": "^0.3.3",
+    "react-three-fiber": "^4.1.2",
+    "react-three-gui": "^0.1.5",
+    "three": "^0.116.0"
+  },
+  "devDependencies": {
+    "@types/node": "^13.13.4",
+    "@types/react": "^16.9.34",
+    "husky": "^4.2.5",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1",
+    "sass": "^1.26.5",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
