--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babylonjs/core": "^4.1.0",
+    "@babylonjs/inspector": "^4.1.0",
+    "@babylonjs/loaders": "^4.1.0",
     "drei": "^0.0.18",
     "lerp": "^1.0.3",
     "next": "9.3.5",
@@ -15,9 +18,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-promise-suspense": "^0.3.3",
-    "react-three-fiber": "^4.1.2",
-    "react-three-gui": "^0.1.5",
-    "three": "^0.116.1"
+    "react-three-gui": "^0.1.5"
   },
   "devDependencies": {
     "@types/node": "^13.13.4",
