feat(transform): the mesh pivots hack inside the root bone is now working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "baseUrl": "src",
     "paths": {
       "@hooks": ["hooks/*"],
-      "@components": ["components/*"]
+      "@components": ["components/*"],
+      "@utils/*": ["utils/*"]
     }
   },
   "exclude": ["node_modules"],
