--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "drei": "^0.0.29",
-    "lerp": "^1.0.3",
+    "@mdi/js": "^5.1.45",
+    "@mdi/react": "^1.4.0",
+    "drei": "^0.0.32",
     "next": "9.3.6",
-    "next-transpile-modules": "^3.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-promise-suspense": "^0.3.3",
-    "react-three-fiber": "^4.1.4",
+    "react-three-fiber": "^4.2.3",
     "react-three-gui": "^0.1.5",
-    "three": "^0.116.1"
+    "three": "^0.116.1",
+    "zustand": "^2.2.3"
   },
   "devDependencies": {
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.34",
     "husky": "^4.2.5",
+    "next-transpile-modules": "^3.3.0",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.0.5",
