--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@mdi/js": "^5.1.45",
+    "@mdi/js": "^5.2.45",
     "@mdi/react": "^1.4.0",
     "drei": "^0.0.32",
-    "next": "9.3.6",
+    "next": "9.4.0",
     "react": "16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "16.13.1",
-    "react-three-fiber": "^4.2.3",
+    "react-switch": "^5.0.1",
+    "react-three-fiber": "^4.2.4",
     "react-three-gui": "^0.1.5",
     "three": "^0.116.1",
     "zustand": "^2.2.3"
   },
   "devDependencies": {
-    "@types/node": "^13.13.5",
-    "@types/react": "^16.9.34",
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
     "husky": "^4.2.5",
     "next-transpile-modules": "^3.3.0",
     "patch-package": "^6.2.2",
@@ -30,7 +32,7 @@
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "sass": "^1.26.5",
-    "typescript": "^3.8.3",
+    "typescript": "^3.9.2",
     "webpack": "^4.43.0"
   },
   "husky": {
