--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reference",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
+    "all-contributors-cli": "^6.17.4",
     "husky": "^4.3.0",
     "next-transpile-modules": "^4.1.0",
     "patch-package": "^6.2.2",
