--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
   "dependencies": {
     "@mdi/js": "^5.6.55",
     "@mdi/react": "^1.4.0",
-    "drei": "^1.5.6",
+    "@react-three/drei": "^9.86.3",
     "next": "9.5.3",
-    "react": "16.13.1",
+    "react": "18.2.0",
     "react-color": "^2.18.1",
-    "react-dom": "16.13.1",
+    "react-dom": "18.2.0",
     "react-github-corner": "^2.5.0",
     "react-switch": "^5.0.1",
-    "react-three-fiber": "^4.2.21",
-    "three": "^0.120.1",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.155.0",
     "zustand": "^2.2.3"
   },
   "devDependencies": {
     "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
+    "@types/three": "^0.156.0",
     "all-contributors-cli": "^6.17.4",
     "husky": "^4.3.0",
     "next-transpile-modules": "^4.1.0",
